--- a/src/main/webapp/view/denied.xhtml
+++ b/src/main/webapp/view/denied.xhtml
@@ -21,7 +21,7 @@
 		</c:if>
 	
 		<p class="message">Acesso Restrito !</p>
-		<a href="/investments/index.jsf">Ir para a página de login</a> 
+		<a href="/index.jsf">Ir para a página de login</a> 
 		<h6><a href="javascript:window.history.back()">Voltar para última página visitada</a></h6>
 	</h:body>
 </html>
