--- a/src/main/webapp/view/config.xhtml
+++ b/src/main/webapp/view/config.xhtml
@@ -33,7 +33,7 @@
                 <div class="col-lg-12">
                     <ol class="breadcrumb">
                         <li class="active">
-                            <i class="fa fa-fw fa-bar-chart-o"></i> <h:outputText value="#{msg['app.config.title']}"/>
+                            <i class="fa fa-fw fa-gear"></i> <h:outputText value="#{msg['app.config.title']}"/>
                         </li>
                     </ol>
                 </div>
