--- a/src/main/webapp/view/fatos_relevantes.xhtml
+++ b/src/main/webapp/view/fatos_relevantes.xhtml
@@ -39,7 +39,7 @@
                 <div class="col-lg-12">
                     <ol class="breadcrumb">
                         <li class="active">
-                            <i class="fa fa-fw fa-bar-chart-o"></i> <h:outputText value="#{msg['app.fr.title']}"/>
+                            <i class="fa fa-fw fa-envelope"></i> <h:outputText value="#{msg['app.fr.title']}"/>
                         </li>
                     </ol>
                 </div>
