--- a/src/main/webapp/view/home.xhtml
+++ b/src/main/webapp/view/home.xhtml
@@ -52,7 +52,7 @@
                 <div class="col-lg-12">
                     <ol class="breadcrumb">
                         <li class="active">
-                            <i class="fa fa-fw fa-bar-chart-o"></i> <h:outputText value="#{msg['app.home.title']}"/>
+                            <i class="fa fa-fw fa-money"></i> <h:outputText value="#{msg['app.home.title']}"/>
                         </li>
                     </ol>
                 </div>
