--- a/src/main/webapp/view/rendimentos.xhtml
+++ b/src/main/webapp/view/rendimentos.xhtml
@@ -45,7 +45,7 @@
                 <div class="col-lg-12">
                     <ol class="breadcrumb">
                         <li class="active">
-                            <i class="fa fa-fw fa-line-chart"></i> <h:outputText value=" #{msg['app.incomes.title']}"/>
+                            <i class="fa fa-fw fa-signal"></i> <h:outputText value=" #{msg['app.incomes.title']}"/>
                         </li>
                     </ol>
                 </div>
