--- a/src/main/webapp/view/home.xhtml
+++ b/src/main/webapp/view/home.xhtml
@@ -128,15 +128,16 @@
 										</p:dataTable>
 										<ui:repeat var="carteira" value="#{homeView.home.carteiras}">
 											<p:panel id="pn#{carteira.name}" rendered="#{not empty carteira.incomes}">
-												<hf:chart type="column" title="#{msg['app.incomes.title']}: #{carteira.name}" credits="#{homeView.credits}" yaxisLabel="#{msg['app.home.portfolio.values']}">
-												    <hf:chartSerie name="#{msg['app.incomes.title']}" value="#{carteira.incomes}" type="column"
-												     			   var="point" point="#{point.value}" tickLabel="#{point.yearMonthFormatted}"
-												     			   dataLabel="&lt;b>{point.name}&lt;/b>&lt;i>&lt;/i>"/>
+												<hf:chart type="column" title="#{msg['app.incomes.title']}: #{carteira.name}" credits="#{homeView.credits}" yaxisLabel="#{msg['app.home.portfolio.values']}"
+															stacking="normal" value="#{carteira.incomes}" var="point" point="#{point.value}">
 												    <hf:chartTooltip  backgroundColor="#000000" shared="true">
 												        <f:facet name="header">
-												            <h:outputText escape="false" value="&lt;table>&lt;tr>&lt;td style='color:white;font-weight:bold;padding-right:5px;'>{point.key}:&lt;/td>&lt;td style='padding-left: 5px;'>"/>
+												            <h:outputText escape="false" value="&lt;table>"/>
 												        </f:facet>
-												        <f:facet name="body"><h:outputText value="&lt;span style='color:white'> &lt;b>R$ {point.y:,.2f}&lt;/b>&lt;/span>&lt;br/>"/></f:facet>
+												        <f:facet name="body">
+												        	<h:outputText escape="false" value="&lt;tr>&lt;td style='color:white;font-weight:bold;padding-right:5px;'>{series.name}:&lt;/td>&lt;td style='padding-left: 5px;'>"/>
+												        	<h:outputText value="&lt;span style='color:white'> &lt;b>R$ {point.y:,.2f}&lt;/b>&lt;/span>&lt;br/>"/>
+												        </f:facet>
 												        <f:facet name="footer"><h:outputText escape="false" value='&lt;/td>&lt;/tr>&lt;/table>' /></f:facet>
 												    </hf:chartTooltip>
 												</hf:chart>
