--- a/src/main/webapp/view/home.xhtml
+++ b/src/main/webapp/view/home.xhtml
@@ -128,8 +128,9 @@
 										</p:dataTable>
 										<ui:repeat var="carteira" value="#{homeView.home.carteiras}">
 											<p:panel id="pn#{carteira.name}" rendered="#{not empty carteira.incomes}">
-												<hf:chart type="column" title="#{msg['app.incomes.title']}: #{carteira.name}" credits="#{homeView.credits}" yaxisLabel="#{msg['app.home.portfolio.values']}"
-															stacking="normal" value="#{carteira.incomes}" var="point" point="#{point.value}" tickLabel="#{point.yearMonthFormatted}" subTitle="#{point.yearMonthFormatted}">
+												<hf:chart type="column" title="#{msg['app.incomes.title']}: #{carteira.name}" credits="#{homeView.credits}" yaxisLabel="#{msg['app.home.portfolio.values']}" 
+															stacking="normal" value="#{carteira.incomes}" var="point" point="#{point.value}" tickLabel="#{point.yearMonthFormatted}" subTitle="#{point.yearMonthFormatted}"
+															colors="#f45b5b,#434348,#90ed7d,#7cb5ec">
 												    <hf:chartTooltip  backgroundColor="#000000" shared="true">
 												        <f:facet name="header">
 												            <h:outputText escape="false" value="&lt;table>"/>
