--- a/src/main/webapp/view/config.xhtml
+++ b/src/main/webapp/view/config.xhtml
@@ -27,6 +27,14 @@
 			    font-weight: bold;
 			    color: #fff;
 			}
+			.panel-black .panel-heading a {
+			    font-weight: bold;
+			    color: #fff;
+			}
+			.panel-primary .panel-heading a {
+			    font-weight: bold;
+			    color: #fff;
+			}
     	</style>
             <!-- Page Heading -->
             <div class="row">
@@ -122,6 +130,28 @@
 				    </div>
 				  </div>
 				</div>
+				<!-- System Actions -->
+                <div class="col-lg-6">
+				  <div class="panel panel-black">
+				    <div class="panel-heading">
+				      <h4 class="panel-title">
+				        <a data-toggle="collapse" href="#collapseSA" class="panel-title">
+				          <h:outputText value="#{msg['app.config.system.actions.title']}"/>
+				        </a>
+				      </h4>
+				    </div>
+				    <div id="collapseSA" class="panel-collapse collapse out">
+				      <div class="panel-body">
+				      	<p:outputPanel id="systemActionsContent" deferred="true">
+						    <p:commandButton id="clSACalcPortfolio" icon="ui-icon-refresh" update=":form:systemActionsContent" action="#{configView.calcPortfolioItems}">
+						        <h:outputText value="#{msg['app.config.system.actions.calc.portfolio']}" />
+						    </p:commandButton>
+				      	</p:outputPanel>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+				<!-- User Config -->
                 <div class="col-lg-12">
 				  <div class="panel panel-primary">
 				    <div class="panel-heading">
