Direct access to Income Page

--- a/src/main/webapp/template/template.xhtml
+++ b/src/main/webapp/template/template.xhtml
@@ -96,7 +96,7 @@
 		                    <span class="icon-bar"></span>
 		                    <span class="icon-bar"></span>
 		                </button>
-		                <a class="navbar-brand" href="index.xhtml"><h:outputText value="#{msg['app.name']}"/></a>
+		                <a class="navbar-brand" href="home.jsf"><h:outputText value="#{msg['app.name']}"/></a>
 		            </div>
 		            <!-- Top Menu Items -->
 		            <ul class="nav navbar-right top-nav">
