--- a/src/main/webapp/template/template.xhtml
+++ b/src/main/webapp/template/template.xhtml
@@ -206,6 +206,12 @@
 		                    		</h:commandLink>
 			                    </li>
 
+		                        <li>
+		                            <a href="extrato.jsf"><i class="fa fa-fw fa-list-ol"></i>
+		                            	<h:outputText value=" #{msg['app.menu.statement']}" />
+		                            </a>
+		                        </li>
+
 			                    <li id="result">
 		                    		<h:commandLink action="#{resultView.init}">
 		                    			<i class="fa fa-fw fa-line-chart"></i>
